@@ -1,3 +1,8 @@
+2009-06-30  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/40566
+	* g++.dg/parse/cond5.C: New test.
+
 2009-06-30  Jason Merrill  <jason@redhat.com>
 
 	PR c++/40595
